[package]
name = "leech"
version = "0.1.0"
authors = ["Michael Smedes <smichaelmedes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bytes = { version = "1", features = ["serde"] }
byteorder = "1.4.2"
futures = "0.3"
rand = "0.8.3"
reqwest = "0.11.0"
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "^0.11.5"
serde_urlencoded = "0.7.0"
sha1 = "^0.6.0"
tokio = {version = "1.2.0", features = ["full"]}