[package]
name = "leech"
version = "0.1.0"
authors = ["Michael Smedes <smichaelmedes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bitvec = "0.22.3"
byteorder = "1.4.2"
bytes = { version = "1", features = ["serde"] }
futures = "0.3"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8.3"
reqwest = "0.11.0"
serde = "^1.0.0"
serde_bencode = "^0.2.3"
serde_bytes = "^0.11.5"
serde_derive = "^1.0.0"
serde_urlencoded = "0.7.0"
sha1 = "^0.6.0"
tokio = {version = "1.2.0", features = ["full"]}
tokio-util = {version = "0.6.9", features = ["codec"]}
